--- a/src/styles.less
+++ b/src/styles.less
@@ -5,6 +5,11 @@
 #map .leaflet-attribution-flag {
   display: none !important;
 }
+
+#map [tuiAppearance][data-appearance="textfield"][data-mode~="readonly"],
+input[tuiAppearance][data-appearance="textfield"]:read-only:not([data-mode]) {
+  background: rgba(255, 255, 255, 0.7) !important;
+}
 // * {
 //   padding: 0px;
 //   margin: 0px;
