fix bugs and add filtering cities

--- a/src/app/pages/main/containers/map-game/map-game.component.html
+++ b/src/app/pages/main/containers/map-game/map-game.component.html
@@ -33,6 +33,7 @@
             tuiTextfield
             [readOnly]="(step$ | async) === 'opponent'"
             formControlName="city"
+            (click)="stopPropogation($event)"
           />
           <!-- [readOnly]="(step$ | async) === 'opponent'" -->
           <!-- <tui-loader size="s" /> -->
