--- a/src/app/pages/main/containers/map-game/map-game.component.less
+++ b/src/app/pages/main/containers/map-game/map-game.component.less
@@ -2,4 +2,18 @@
   &__content {
     z-index: 1000;
   }
+
+  &__score {
+    background-color: var(--bs-success);
+    span {
+      color: var(--tui-text-primary-on-accent-1);
+    }
+  }
+
+  &__timer {
+    background-color: var(--bs-danger);
+    span {
+      color: var(--tui-text-primary-on-accent-1);
+    }
+  }
 }
