--- a/src/styles.less
+++ b/src/styles.less
@@ -6,6 +6,10 @@
   display: none !important;
 }
 
+#map .leaflet-control-geosearch {
+  display: none;
+}
+
 #map [tuiAppearance][data-appearance="textfield"][data-mode~="readonly"],
 input[tuiAppearance][data-appearance="textfield"]:read-only:not([data-mode]) {
   background: rgba(255, 255, 255, 0.7) !important;
