--- a/src/app/pages/main/containers/map-game/map-game.component.less
+++ b/src/app/pages/main/containers/map-game/map-game.component.less
@@ -12,7 +12,16 @@
 
   &__timer {
     background-color: var(--bs-danger);
+    color: var(--tui-text-primary-on-accent-1);
     span {
+      color: var(--tui-text-primary-on-accent-1);
+    }
+
+    app-map-timer {
+      color: var(--tui-text-primary-on-accent-1);
+    }
+
+    tui-pulse {
       color: var(--tui-text-primary-on-accent-1);
     }
   }
