--- a/src/app/pages/start/start-page.component.html
+++ b/src/app/pages/start/start-page.component.html
@@ -1,1 +1,13 @@
-<p>start works!</p>
+<div class="container">
+  <div class="row rounded-5 border">
+    <div
+      class="d-flex flex-column align-items-center justify-content-center vh-100 rounded-5 border"
+    >
+      <button tuiButton class="mb-1" type="button" [routerLink]="['/main']">
+        Начать
+      </button>
+
+      <button tuiButton type="button" [routerLink]="['/main']">Опции</button>
+    </div>
+  </div>
+</div>
