--- a/src/app/pages/main/containers/map-game/map-game.component.less
+++ b/src/app/pages/main/containers/map-game/map-game.component.less
@@ -3,9 +3,13 @@
     z-index: 1000;
   }
 
-  &__score {
-    background-color: var(--bs-success);
-    span {
+  &__chip {
+    background-color: var(--tui-text-action);
+    //background-color: var(--tui-background-neutral-1);
+
+    app-map-timer,
+    span,
+    strong {
       color: var(--tui-text-primary-on-accent-1);
     }
   }
@@ -25,4 +29,25 @@
       color: var(--tui-text-primary-on-accent-1);
     }
   }
+
+  &__info {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: repeat(2, 1fr);
+
+    :nth-child(2),
+    :nth-child(4) {
+      justify-self: end;
+    }
+  }
+}
+
+tui-drawer {
+  z-index: 1000;
+}
+
+.drawer {
+  top: 0;
+  border-radius: 0;
+  inline-size: 20rem;
 }
