--- a/src/app/pages/main/main-page.component.html
+++ b/src/app/pages/main/main-page.component.html
@@ -1,21 +1,14 @@
 <div>
   <div class="container">
-    <div class="row rounded-5 border">
+    <div class="row rounded-5 border vh-100">
       <app-map-game
-        class="col-12 col-md-8 p-0 rounded-5 overflow-hidden vh-100"
+        class="col-12 col-md-8 p-0 rounded-5 overflow-hidden h-100"
       ></app-map-game>
       <ng-container *tuiLet="_breakpoint$ | async as breakpoint">
         <ng-container *ngIf="breakpoint !== 'mobile'">
-          <div class="col-12 col-md-4 p-3">
-            <p class="h3">Использованные города</p>
-
-            <ng-container *ngFor="let city of cityListSig(); last as isLast">
-              <span
-                >{{ city.name
-                }}<span *ngIf="usedCityList.length > 1 && !isLast">, </span>
-              </span>
-            </ng-container>
-          </div>
+          <app-used-cities-list
+            class="col-12 col-md-4 overflow-hidden p-3 h-100"
+          ></app-used-cities-list>
         </ng-container>
       </ng-container>
     </div>
