add options page

--- a/src/app/pages/start/start-page.component.html
+++ b/src/app/pages/start/start-page.component.html
@@ -7,7 +7,7 @@
         Начать
       </button>
 
-      <button tuiButton type="button" [routerLink]="['/main']">Опции</button>
+      <button tuiButton type="button" [routerLink]="['/options']">Опции</button>
     </div>
   </div>
 </div>
