add game over and game config

--- a/src/app/pages/main/containers/map-game/map-game.component.less
+++ b/src/app/pages/main/containers/map-game/map-game.component.less
@@ -1,6 +1,7 @@
 .map-game {
   &__content {
     z-index: 1000;
+    pointer-events: none;
   }
 
   &__chip {
@@ -42,6 +43,10 @@
   }
 }
 
+button,
+tui-chip {
+  pointer-events: all;
+}
 tui-drawer {
   z-index: 1000;
 }
