--- a/src/app/pages/main/containers/map-game/map-game.component.html
+++ b/src/app/pages/main/containers/map-game/map-game.component.html
@@ -22,7 +22,7 @@
       (leafletMapReady)="onMapReady($event)"
     >
       <div
-        class="container position-relative d-flex flex-column justify-content-end map-game__content"
+        class="container position-relative d-flex flex-column justify-content-between map-game__content h-100"
       >
         <div class="mt-4">
           <div class="map-game__info mb-2">
@@ -69,28 +69,11 @@
                 </span>
               </button>
             </ng-container>
-
-            <!-- </div>
-            <div class="d-flex flex-column align-items-end"> -->
-            <!-- <app-map-timer /> -->
-            <!-- <tui-chip class="map-game__score mb-1" size="xs"
-                ><span>Очки</span></tui-chip
-              > -->
-
-            <!-- </div> -->
           </div>
           <tui-textfield
             class="border"
             [tuiTextfieldSize]="ctx.breakpoint | func : resizeElements"
           >
-            <!-- <tui-textfield class="mt-1" iconEnd="@tui.search"> -->
-            <!-- <label tuiLabel>I am a label</label> -->
-            <!-- <tui-icon tuiTooltip="I am a hint" /> -->
-
-            <!-- <label tuiLabel *ngIf="cityName$ | async | func : isNullOrEmptyString"
-            >Invalid</label
-          > -->
-
             <input
               #inputCity
               placeholder="Введите город"
@@ -103,11 +86,26 @@
             <ng-container *ngIf="ctx.step === 'opponent'">
               <tui-loader size="s" />
             </ng-container>
-            <!-- [readOnly]="(step$ | async) === 'opponent'" -->
-            <!-- <tui-loader size="s" /> -->
 
             <tui-icon icon="@tui.search" (click)="sendData$.next(true)" />
           </tui-textfield>
+        </div>
+        <div class="d-flex justify-content-center">
+          <button
+            class="map-game__timer small mb-4 mb-md-2"
+            size="xs"
+            tuiChip
+            type="button"
+            (click)="setGameOver()"
+          >
+            <span
+              >Завершить игру
+              <tui-icon
+                icon="@tui.screen-share-off"
+                [style.font-size.rem]="1"
+              />
+            </span>
+          </button>
         </div>
       </div>
     </div>
